Static fonts over carousel

--- a/index.html
+++ b/index.html
@@ -112,61 +112,30 @@
                     <figure class="slider-image">
                         <img src="assets/img/slider/slide-1.jpg" alt=""/>
                     </figure>
-                    <div class="slider-text text-center">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <h1><strong style="color:#f98012;">gaurang</strong> panchal</h1>
-                                    <p>I am Anand, Gujarat based multi-talented photographer, specialising in Wedding photography and
-                                    cinematography. Being only 26 and shooting professionally for a little over six years and having experience with this
-                                    industries over 10 year.
-                                    </p>
-                                    <a href="contact.html" class="itg-button active">Contact us</a>
-                                    <a href="about-us.html" class="itg-button">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="item">
                     <figure class="slider-image">
                         <img src="assets/img/slider/slide-2.jpg" alt=""/>
                     </figure>
-                    <div class="slider-text text-center">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <h1><strong style="color:#f98012;">gaurang</strong> panchal</h1>
-                                    <p>I am Anand, Gujarat based multi-talented photographer, specialising in Wedding photography and
-                                        cinematography. Being only 26 and shooting professionally for a little over six years and having experience with
-                                        this
-                                        industries over 10 year.
-                                    </p>
-                                    <a href="contact.html" class="itg-button active">Contact us</a>
-                                    <a href="about-us.html" class="itg-button">Learn more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="item">
                     <figure class="slider-image">
                         <img src="assets/img/slider/slide-3.jpg" alt=""/>
                     </figure>
-                    <div class="slider-text text-center">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <h1><strong style="color:#f98012;">gaurang</strong> panchal</h1>
-                                    <p>I am Anand, Gujarat based multi-talented photographer, specialising in Wedding photography and
-                                        cinematography. Being only 26 and shooting professionally for a little over six years and having experience with
-                                        this
-                                        industries over 10 year.
-                                    </p>
-                                    <a href="contact.html" class="itg-button active">Contact us</a>
-                                    <a href="about-us.html" class="itg-button">Learn more</a>
-                                </div>
-                            </div>
+                </div>
+            </div>
+            <div class="slider-text text-center" style="z-index: 2;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h1><strong style="color:#f98012;">gaurang</strong> panchal</h1>
+                            <p>I am Anand, Gujarat based multi-talented photographer, specialising in Wedding photography and
+                                cinematography. Being only 26 and shooting professionally for a little over six years and having
+                                experience with this
+                                industries over 10 year.
+                            </p>
+                            <a href="contact.html" class="itg-button active">Contact us</a>
+                            <a href="about-us.html" class="itg-button">Learn more</a>
                         </div>
                     </div>
                 </div>
