Fix scroll to top function

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </figure>
                 </div>
                 <div class="item">
-                    <figure class="slider-image">
+                    <fig class="slider-image">
                         <img src="assets/img/slider/slide-3.jpg" alt=""/>
                     </figure>
                 </div>
