--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                                     forever. This is the story that matters most : Real people, Real Stories, Real Moments.
                                 </p>
                                 <ul class="social-icon solid">
-                                    <li><a href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i class="fa fa-facebook-square" aria-hidden="true"></i></span></a></li>
-                                    <li><a href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
-                                    <li><a href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
+                                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i class="fa fa-facebook-square" aria-hidden="true"></i></span></a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
+                                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -383,11 +383,11 @@
 							<div class="social">
 								<h3>Follow :</h3>
 								<ul class="social-icon">
-                                    <li><a href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i class="fa fa-facebook-square"
+                                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i class="fa fa-facebook-square"
                                                     aria-hidden="true"></i></span></a></li>
-                                    <li><a href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram"
+                                    <li><a target="_blank" href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram"
                                                     aria-hidden="true"></i></span></a></li>
-                                    <li><a href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i class="fa fa-youtube"
+                                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i class="fa fa-youtube"
                                                     aria-hidden="true"></i></span></a></li>
 								</ul>
 							</div>
