Small alignment adjustment and icon update

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!--//================Photographer End==============//-->
         <div class="clear"></div>
         <!--//================About start==============//-->
-        <section class="padB100">
+        <section class="padB100 padB100">
             <div class="container">
                 <div class="row">
                     <div class="about">
@@ -160,7 +160,7 @@
                                 <!-- Theme Heading -->
                                 <a class="first"><img src="assets/img/all/my-story-1.jpg" alt="my-story-1"/></a>
                                 <a class="second"><img src="assets/img/all/my-story-2.jpg" alt="my-story-2"/></a>
-                                <a class="third active"><img src="assets/img/all/my-story-3.jpg" alt="my-story-3"/></a>
+                                <a class="third"><img src="assets/img/all/my-story-3.jpg" alt="my-story-3"/></a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -203,17 +203,13 @@
                         <h3><span class="heading-shape">our <strong>services</strong></span></h3>
                         <!--<p>Wedding , Pre-Wedding, Engagement, Modeling, Maternity, Baby Shoot,</p>-->
                          <!--align left and right -->
-                            <div class="d-flex" style="font-size: 1.25em">
-                                <div>
-                                    <li>Wedding</li>
-                                    <li>Pre-Wedding</li>
-                                    <li>Engagement</li>
-                                </div>
-                                <div class="ms-auto">
-                                    <li>Modelling</li>
-                                    <li>Maternity</li>
-                                    <li>Baby Photoshoot</li>
-                                </div>
+                            <div class="d-flex" style="font-size: 1.25em; margin-top: 10px;">
+                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Wedding</li>
+                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Pre-Wedding</li>
+                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Engagement</li>
+                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Modelling</li>
+                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Maternity</li>
+                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Baby Photoshoot</li>
                             </div>
                     </div>
                     <!-- Theme Heading -->
