Updates and minor fixes

--- a/index.html
+++ b/index.html
@@ -56,27 +56,13 @@
                                     <!-- Navbar Collapse -->
                                     <div class="navbar-collapse collapse">
                                         <!-- nav -->
-                                        <div class="col-md-1 head-search hidden-xs">
-                                            <a href="#" class="search-click"><i class="fa fa-search" aria-hidden="true"></i></a>
-                                        </div>
                                         <ul class="nav navbar-nav">
                                             <li><a href="index.html">About Us</a></li>
                                             <li>
-                                                <a href="#">Photography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="about-us.html">about us</a></li>
-                                                    <li><a href="error.html">error 404</a></li>
-                                                    <li><a href="comming-soon.html">comming soon</a></li>
-                                                </ul>
+                                                <a href="photography.html">Photography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#">Videography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="portfolio-style-1.html">portfolio style 1</a></li>
-                                                    <li><a href="portfolio-style-2.html">portfolio style 2</a></li>
-                                                    <li><a href="portfolio-style-3.html">portfolio style 3</a></li>
-                                                    <li><a href="portfolio-style-4.html">portfolio style 4</a></li>
-                                                </ul>
+                                                <a href="comming-soon.html">Videography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
                                             </li>
                                             <li><a href="contact.html">contact us</a></li>
                                         </ul>
@@ -217,7 +203,6 @@
             </div>
         </section>
         <!--//================Services end==============//-->
-        
         <div class="clear"></div>
         <!--//================Work Start==============//-->
         <section>
