--- a/comming-soon.html
+++ b/comming-soon.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--
-        **********************************************************************************************************
-                  Copyright (c) 2017 It-Geesks
-        ********************************************************************************************************** 
-        -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--[if IE]>
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <![endif]-->
-        <meta name="keywords" content="HTML5 Template" />
-        <meta name="description" content="Be-Photography | Creative Photography Agency, Portfolio and Multipurpose HTML5 Responsive Template" />
-        <meta name="author" content="itgeeksin.com" />
+        <meta name="keywords" content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump" />
+        <meta namex="description"
+            content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
+        <meta name="author" content="Ronak Patel" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Be-Photography | Creative Photography Agency, Portfolio and Multipurpose HTML5 Responsive Template</title>
+        <title>PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies</title>
         <!-- Bootstrap -->
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
         <!-- Master Css -->
         <link href="main.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
     </head>
     <body>
         <!--//================preloader  start==============//--> 
@@ -40,7 +30,73 @@
                 <h4>Loading</h4>
             </div>
         </div>
-        <!--//================preloader  end==============//--> 
+        <!--//================preloader  end==============//-->
+        <!--//================Header start==============//-->
+        <header id="header" style="background-color: #000;">
+            <div id="main-menu" class="wa-main-menu">
+                <!-- Menu -->
+                <div class="wathemes-menu relative">
+                    <!-- navbar -->
+                    <div class="navbar navbar-default mar0" role="navigation">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-12 head-box">
+                                    <div class="navbar-header">
+                                        <!-- Button For Responsive toggle -->
+                                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                            data-target=".navbar-collapse">
+                                            <span class="sr-only">Toggle navigation</span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                            <span class="icon-bar"></span>
+                                        </button>
+                                        <!-- Logo -->
+                                        <a class="navbar-brand" href="index.html">
+                                            <img class="site_logo" alt="Site Logo" src="assets/img/logo.png" />
+                                        </a>
+                                    </div>
+                                    <!-- Navbar Collapse -->
+                                    <div class="navbar-collapse collapse">
+                                        <!-- nav -->
+                                        <ul class="nav navbar-nav">
+                                            <li><a href="index.html">About Us</a></li>
+                                            <li>
+                                                <a href="photography.html">Photography <i
+                                                        class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
+                                                        aria-hidden="true"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="comming-soon.html">Videography <i
+                                                        class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
+                                                        aria-hidden="true"></i></a>
+                                            </li>
+                                            <li><a href="contact.html">contact us</a></li>
+                                        </ul>
+                                    </div>
+                                    <!-- navbar-collapse -->
+                                </div>
+                                <!-- col-md-12 -->
+                            </div>
+                            <!-- row -->
+                        </div>
+                        <!-- container -->
+                    </div>
+                    <!-- navbar -->
+                    <div id="search-open" class="top-search">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="input-group"> <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                                    <input type="text" class="form-control" placeholder="Search">
+                                    <a class="input-group-addon close-search search-close"><i class="fa fa-times"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--  Menu -->
+            </div>
+        </header>
+        <!--//================Header end==============//-->
         <!--//================Comming Soon==============//-->
         <section class="special-section">
             <div class="special-style dark-overlay">
@@ -54,7 +110,6 @@
                                 <a href="index.html"><img src="assets/img/logo.png" alt=""/></a>
                             </figure>
                             <h1>WE ARE COMMING SOON</h1>
-                            <p><i>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore etc</i></p>
                             <div class="timer">
                                 <ul id="coming-soon-timer">
                                     <li class="after-border"><span id="weeks"></span><br>
@@ -74,23 +129,16 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="row">
-                                <div class="col-md-8 col-sm-8 col-xs-10 col-md-offset-2 col-sm-offset-2 col-xs-offset-1">
-                                    <div class="search_bar marB30">
-                                        <input type="text" name="search" placeholder="Search..">
-                                        <button type="submit" class="default-btn">Sign up</button>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
                 <ul class="social-icon solid">
-                    <li><a href="#"><span><i class="fa fa-facebook-square" aria-hidden="true"></i></span></a></li>
-                    <li><a href="#" class="active"><span><i class="fa fa-linkedin-square" aria-hidden="true"></i></span></a></li>
-                    <li><a href="#"><span><i class="fa fa-skype" aria-hidden="true"></i></span></a></li>
-                    <li><a href="#"><span><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
-                    <li><a href="#"><span><i class="fa fa-pinterest" aria-hidden="true"></i></span></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i
+                                    class="fa fa-facebook-square" aria-hidden="true"></i></span></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram"
+                                    aria-hidden="true"></i></span></a></li>
+                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i
+                                    class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
                 </ul>
             </div>
         </section>
