--- a/error.html
+++ b/error.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--
-        **********************************************************************************************************
-                  Copyright (c) 2017 It-Geesks
-        ********************************************************************************************************** 
-        -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--[if IE]>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-        <![endif]-->
-        <meta name="keywords" content="HTML5 Template" />
-        <meta name="description" content="Be-Photography | Creative Photography Agency, Portfolio and Multipurpose HTML5 Responsive Template" />
-        <meta name="author" content="itgeeksin.com" />
+                <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+                <![endif]-->
+        <meta name="keywords" content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump" />
+        <meta namex="description"
+            content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
+        <meta name="author" content="Ronak Patel" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Be-Photography | Creative Photography Agency, Portfolio and Multipurpose HTML5 Responsive Template</title>
+        <title>PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies</title>
         <!-- Bootstrap -->
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
         <!-- Master Css -->
         <link href="main.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
     </head>
     <body>
         <!--//================preloader  start==============//--> 
