--- a/photography.html
+++ b/photography.html
@@ -4,11 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!--[if IE]>
-                <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-                <![endif]-->
+        <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+        <![endif]-->
         <meta name="keywords" content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump" />
-        <meta namex="description"
-            content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
+        <meta namex="description" content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
         <meta name="author" content="Ronak Patel" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -32,7 +31,7 @@
         </div>
         <!--//================preloader  end==============//-->  
         <!--//================Header start==============//-->  
-        <header id="header">
+        <header id="header" style="background-color: #000;">
             <div id="main-menu" class="wa-main-menu">
                 <!-- Menu -->
                 <div class="wathemes-menu relative">
@@ -43,16 +42,15 @@
                                 <div class="col-md-12 head-box">
                                     <div class="navbar-header">
                                         <!-- Button For Responsive toggle -->
-                                        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                            data-target=".navbar-collapse">
-                                            <span class="sr-only">Toggle navigation</span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                        </button>
+                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                        <span class="sr-only">Toggle navigation</span> 
+                                        <span class="icon-bar"></span> 
+                                        <span class="icon-bar"></span> 
+                                        <span class="icon-bar"></span>
+                                        </button> 
                                         <!-- Logo -->
                                         <a class="navbar-brand" href="index.html">
-                                            <img class="site_logo" alt="Site Logo" src="assets/img/logo.png" />
+                                        <img class="site_logo" alt="Site Logo"  src="assets/img/logo.png" />
                                         </a>
                                     </div>
                                     <!-- Navbar Collapse -->
@@ -61,14 +59,10 @@
                                         <ul class="nav navbar-nav">
                                             <li><a href="index.html">About Us</a></li>
                                             <li>
-                                                <a href="photography.html">Photography <i
-                                                        class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
-                                                        aria-hidden="true"></i></a>
+                                                <a href="#">Photography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
                                             </li>
                                             <li>
-                                                <a href="comming-soon.html">Videography <i
-                                                        class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
-                                                        aria-hidden="true"></i></a>
+                                                <a href="comming-soon.html">Videography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
                                             </li>
                                             <li><a href="contact.html">contact us</a></li>
                                         </ul>
@@ -87,7 +81,7 @@
                             <div class="row">
                                 <div class="input-group"> <span class="input-group-addon"><i class="fa fa-search"></i></span>
                                     <input type="text" class="form-control" placeholder="Search">
-                                    <a class="input-group-addon close-search search-close"><i class="fa fa-times"></i></a>
+                                    <a class="input-group-addon close-search search-close"><i class="fa fa-times"></i></a> 
                                 </div>
                             </div>
                         </div>
@@ -97,37 +91,16 @@
             </div>
         </header>
         <!--//================Header end==============//--> 
-        <div class="page-header contact padT100 padB70">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <!-- Theme Heading -->
-                        <div class="theme-heading">
-                            <h1>Contact us</h1>
-                            <h3><span class="heading-shape">Contact <strong>us</strong></span></h3>
-                        </div>
-                        <!-- Theme Heading -->
-                        <div class="breadcrumb-box">
-                            <ul class="breadcrumb text-center colorW marB0">
-                                <li>
-                                    <a href="index.html">Home</a>
-                                </li>
-                                <li class="active">Contact us</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="clear"></div>
+        <div class="padT100 padB100">s</div>
         <!--//================Contact start==============//-->
-        <div class="padB100 padT100">
-            <div class="contact-map padB100 padT100">
-                <div class="container">
-                    <div class="map-area">
-                        <div id="gmap_canvas" class="maps open"></div>
-                    </div>
+        <section>
+            <div class="container">
+                <!-- Theme Heading -->
+                <div class="theme-heading">
+                    <h1>Contact us</h1>
+                    <h3><span class="heading-shape">Contact <strong>us</strong></span></h3>
                 </div>
+                <!-- Theme Heading -->
             </div>
             <div class="contact-us padT100 padB100">
                 <div class="container">
@@ -135,23 +108,23 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="address">
 								<h3>Contact</h3>
-                                <ul>
-                                    <li><span>Address:</span>2 Naksh elegance, Dedarda, Borsad</li>
-                                    <li><span>Contact no:</span>(+91) 85119 33457 </li>
-                                    <li><span>Email:</span>ddborsad@gmail.com</li>
-                                    <li><span>Website:</span>photostudiocreativity.in</li>
-                                </ul>
+								<ul>
+									<li><span>Address:</span>2 Naksh elegance, Dedarda, Borsad</li>
+									<li><span>Contact no:</span>(+91) 85119 33457 </li>
+									<li><span>Email:</span>ddborsad@gmail.com</li>
+									<li><span>Website:</span>photostudiocreativity.in</li>
+								</ul>
 							</div>
 							<div class="social">
 								<h3>Follow :</h3>
-                                <ul class="social-icon">
-                                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i
-                                                    class="fa fa-facebook-square" aria-hidden="true"></i></span></a></li>
+								<ul class="social-icon">
+                                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i class="fa fa-facebook-square"
+                                                    aria-hidden="true"></i></span></a></li>
                                     <li><a target="_blank" href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram"
                                                     aria-hidden="true"></i></span></a></li>
-                                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i
-                                                    class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
-                                </ul>
+                                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i class="fa fa-youtube"
+                                                    aria-hidden="true"></i></span></a></li>
+								</ul>
 							</div>
 						</div>
 						<div class="col-md-8 col-sm-6 col-xs-12">
@@ -181,9 +154,11 @@
 					</div>
                 </div>
             </div>
-            <div class="clear"></div>
-        </div>
-        <!--//================Contact end==============//-->	
+        </section>
+        <!--//================Contact end==============//-->
+        <!-- scroll top button -->
+        <a id="scroll-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
+        <!--//================Footer end==============//--> 	
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
@@ -191,9 +166,8 @@
         <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
         <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
         <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script> 		
-        <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCIdIjmZwQXmxM_eNnEPMp1YQm4DFXpkkc"></script>	 
+        <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script> 
+        <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>        
         <script src="assets/js/main.js"></script>
     </body>
 </html>
