--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <div class="work-gallery col-md-2 col-sm-4 col-xs-12 mix">
                             <div class="theme-hover">
                                 <figure>
-                                    <img src="assets/img/work-gallery/work-1.jpg" alt=""/>
+                                    <img src="assets/img/work-gallery/work-1.jpg" alt="" style="object-fit: cover;"/>
                                     <figcaption>
                                         <div class="content">
                                             <div class="content-box">
@@ -236,7 +236,7 @@
                         <div class="work-gallery col-md-2 col-sm-4 col-xs-12 mix">
                             <div class="theme-hover">
                                 <figure>
-                                    <img src="assets/img/work-gallery/work-2.jpg" alt=""/>
+                                    <img src="assets/img/work-gallery/work-2.jpg" alt="" style="object-fit: cover;"/>
                                     <figcaption>
                                         <div class="content">
                                             <div class="content-box">
@@ -250,7 +250,7 @@
                         <div class="work-gallery col-md-2 col-sm-4 col-xs-12">
                             <div class="theme-hover">
                                 <figure>
-                                    <img src="assets/img/work-gallery/work-3.jpg" alt=""/>
+                                    <img src="assets/img/work-gallery/work-3.jpg" alt="" style="object-fit: cover;"/>
                                     <figcaption>
                                         <div class="content">
                                             <div class="content-box">
@@ -292,7 +292,7 @@
                         <div class="work-gallery col-md-2 col-sm-4 col-xs-12">
                             <div class="theme-hover">
                                 <figure>
-                                    <img src="assets/img/work-gallery/work-6.jpg" alt=""/>
+                                    <img src="assets/img/work-gallery/work-6.jpg" alt="" style="object-fit: cover;"/>
                                     <figcaption>
                                         <div class="content">
                                             <div class="content-box">
@@ -306,7 +306,7 @@
                         <div class="work-gallery col-md-2 col-sm-4 col-xs-12">
                             <div class="theme-hover">
                                 <figure>
-                                    <img src="assets/img/work-gallery/work-7.jpg" alt=""/>
+                                    <img src="assets/img/work-gallery/work-7.jpg" alt="" style="object-fit: cover;"/>
                                     <figcaption>
                                         <div class="content">
                                             <div class="content-box">
@@ -320,7 +320,7 @@
                         <div class="work-gallery col-md-2 col-sm-4 col-xs-12">
                             <div class="theme-hover">
                                 <figure>
-                                    <img src="assets/img/work-gallery/work-8.jpg" alt=""/>
+                                    <img src="assets/img/work-gallery/work-8.jpg" alt="" style="object-fit: cover;"/>
                                     <figcaption>
                                         <div class="content">
                                             <div class="content-box">
