Remove videography links from all pages

--- a/photography.html
+++ b/photography.html
@@ -1,173 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!--[if IE]>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-        <![endif]-->
-        <meta name="keywords" content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump" />
-        <meta namex="description" content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
-        <meta name="author" content="Ronak Patel" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies</title>
-        <!-- Bootstrap -->
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-        <!-- Master Css -->
-        <link href="main.css" rel="stylesheet">
-    </head>
-    <body>
-        <!--//================preloader  start==============//--> 
-        <div class="preloader">
-            <div class="itg-loader">
-                <figure>
-                    <img src="assets/img/loader/loder.png" alt=""/>
-                </figure>
-                <h4>Loading</h4>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--[if IE]>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <![endif]-->
+    <meta
+      name="keywords"
+      content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump"
+    />
+    <meta
+      namex="description"
+      content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies"
+    />
+    <meta name="author" content="Ronak Patel" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>
+      PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding
+      and other ceremonies
+    </title>
+    <!-- Bootstrap -->
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <!-- Master Css -->
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!--//================preloader  start==============//-->
+    <div class="preloader">
+      <div class="itg-loader">
+        <figure>
+          <img src="assets/img/loader/loder.png" alt="" />
+        </figure>
+        <h4>Loading</h4>
+      </div>
+    </div>
+    <!--//================preloader  end==============//-->
+    <!--//================Header start==============//-->
+    <header id="header" style="background-color: #000">
+      <div id="main-menu" class="wa-main-menu">
+        <!-- Menu -->
+        <div class="wathemes-menu relative">
+          <!-- navbar -->
+          <div class="navbar navbar-default mar0" role="navigation">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12 head-box">
+                  <div class="navbar-header">
+                    <!-- Button For Responsive toggle -->
+                    <button
+                      type="button"
+                      class="navbar-toggle"
+                      data-toggle="collapse"
+                      data-target=".navbar-collapse"
+                    >
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <!-- Logo -->
+                    <a class="navbar-brand" href="index.html">
+                      <img
+                        class="site_logo"
+                        alt="Site Logo"
+                        src="assets/img/logo.png"
+                      />
+                    </a>
+                  </div>
+                  <!-- Navbar Collapse -->
+                  <div class="navbar-collapse collapse">
+                    <!-- nav -->
+                    <ul class="nav navbar-nav">
+                      <li><a href="index.html">About Us</a></li>
+                      <li>
+                        <a href="#"
+                          >Photography
+                          <i
+                            class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </li>
+                      <li><a href="contact.html">contact us</a></li>
+                    </ul>
+                  </div>
+                  <!-- navbar-collapse -->
+                </div>
+                <!-- col-md-12 -->
+              </div>
+              <!-- row -->
             </div>
+            <!-- container -->
+          </div>
+          <!-- navbar -->
+          <div id="search-open" class="top-search">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="input-group">
+                  <span class="input-group-addon"
+                    ><i class="fa fa-search"></i
+                  ></span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Search"
+                  />
+                  <a class="input-group-addon close-search search-close"
+                    ><i class="fa fa-times"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!--//================preloader  end==============//-->  
-        <!--//================Header start==============//-->  
-        <header id="header" style="background-color: #000;">
-            <div id="main-menu" class="wa-main-menu">
-                <!-- Menu -->
-                <div class="wathemes-menu relative">
-                    <!-- navbar -->
-                    <div class="navbar navbar-default mar0" role="navigation">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12 head-box">
-                                    <div class="navbar-header">
-                                        <!-- Button For Responsive toggle -->
-                                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                        <span class="sr-only">Toggle navigation</span> 
-                                        <span class="icon-bar"></span> 
-                                        <span class="icon-bar"></span> 
-                                        <span class="icon-bar"></span>
-                                        </button> 
-                                        <!-- Logo -->
-                                        <a class="navbar-brand" href="index.html">
-                                        <img class="site_logo" alt="Site Logo"  src="assets/img/logo.png" />
-                                        </a>
-                                    </div>
-                                    <!-- Navbar Collapse -->
-                                    <div class="navbar-collapse collapse">
-                                        <!-- nav -->
-                                        <ul class="nav navbar-nav">
-                                            <li><a href="index.html">About Us</a></li>
-                                            <li>
-                                                <a href="#">Photography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="comming-soon.html">Videography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
-                                            </li>
-                                            <li><a href="contact.html">contact us</a></li>
-                                        </ul>
-                                    </div>
-                                    <!-- navbar-collapse -->
-                                </div>
-                                <!-- col-md-12 -->
-                            </div>
-                            <!-- row -->
-                        </div>
-                        <!-- container -->
-                    </div>
-                    <!-- navbar -->
-                    <div id="search-open" class="top-search">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="input-group"> <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                                    <input type="text" class="form-control" placeholder="Search">
-                                    <a class="input-group-addon close-search search-close"><i class="fa fa-times"></i></a> 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--  Menu -->
+        <!--  Menu -->
+      </div>
+    </header>
+    <!--//================Header end==============//-->
+    <div class="padT100 padB100">s</div>
+    <!--//================Contact start==============//-->
+    <section>
+      <div class="container">
+        <!-- Theme Heading -->
+        <div class="theme-heading">
+          <h1>Contact us</h1>
+          <h3>
+            <span class="heading-shape">Contact <strong>us</strong></span>
+          </h3>
+        </div>
+        <!-- Theme Heading -->
+      </div>
+      <div class="contact-us padT100 padB100">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="address">
+                <h3>Contact</h3>
+                <ul>
+                  <li>
+                    <span>Address:</span>2 Naksh elegance, Dedarda, Borsad
+                  </li>
+                  <li><span>Contact no:</span>(+91) 85119 33457</li>
+                  <li><span>Email:</span>ddborsad@gmail.com</li>
+                  <li><span>Website:</span>photostudiocreativity.in</li>
+                </ul>
+              </div>
+              <div class="social">
+                <h3>Follow :</h3>
+                <ul class="social-icon">
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.facebook.com/photostudiocreativity.in"
+                      class="active"
+                      ><span
+                        ><i
+                          class="fa fa-facebook-square"
+                          aria-hidden="true"
+                        ></i></span
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.instagram.com/photostudio_creativity"
+                      ><span
+                        ><i
+                          class="fa fa-instagram"
+                          aria-hidden="true"
+                        ></i></span
+                    ></a>
+                  </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"
+                      ><span
+                        ><i class="fa fa-youtube" aria-hidden="true"></i></span
+                    ></a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </header>
-        <!--//================Header end==============//--> 
-        <div class="padT100 padB100">s</div>
-        <!--//================Contact start==============//-->
-        <section>
-            <div class="container">
-                <!-- Theme Heading -->
-                <div class="theme-heading">
-                    <h1>Contact us</h1>
-                    <h3><span class="heading-shape">Contact <strong>us</strong></span></h3>
-                </div>
-                <!-- Theme Heading -->
+            <div class="col-md-8 col-sm-6 col-xs-12">
+              <div class="row">
+                <form class="theme-form">
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" name="name" placeholder="Name" />
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" name="email" placeholder="Email" />
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" name="phone" placeholder="Phone" />
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input type="text" name="subject" placeholder="Subject" />
+                  </div>
+                  <div class="col-md-12 col-sm-12 col-xs-12">
+                    <textarea
+                      name="message"
+                      placeholder="Type your question"
+                      rows="8"
+                    ></textarea>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-12">
+                    <input
+                      type="submit"
+                      name="submit"
+                      class="itg-button"
+                      value="Send"
+                    />
+                  </div>
+                </form>
+              </div>
             </div>
-            <div class="contact-us padT100 padB100">
-                <div class="container">
-					<div class="row">
-						<div class="col-md-4 col-sm-6 col-xs-12">
-							<div class="address">
-								<h3>Contact</h3>
-								<ul>
-									<li><span>Address:</span>2 Naksh elegance, Dedarda, Borsad</li>
-									<li><span>Contact no:</span>(+91) 85119 33457 </li>
-									<li><span>Email:</span>ddborsad@gmail.com</li>
-									<li><span>Website:</span>photostudiocreativity.in</li>
-								</ul>
-							</div>
-							<div class="social">
-								<h3>Follow :</h3>
-								<ul class="social-icon">
-                                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i class="fa fa-facebook-square"
-                                                    aria-hidden="true"></i></span></a></li>
-                                    <li><a target="_blank" href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram"
-                                                    aria-hidden="true"></i></span></a></li>
-                                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i class="fa fa-youtube"
-                                                    aria-hidden="true"></i></span></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-8 col-sm-6 col-xs-12">
-							<div class="row">
-								<form class="theme-form">
-									<div class="col-md-6 col-sm-6 col-xs-12">
-										<input type="text" name="name" placeholder="Name">
-									</div>
-									<div class="col-md-6 col-sm-6 col-xs-12">
-										<input type="text" name="email" placeholder="Email">
-									</div>
-									<div class="col-md-6 col-sm-6 col-xs-12">
-										<input type="text" name="phone" placeholder="Phone">
-									</div>
-									<div class="col-md-6 col-sm-6 col-xs-12">
-										<input type="text" name="subject" placeholder="Subject">
-									</div>
-									<div class="col-md-12 col-sm-12 col-xs-12">
-										<textarea name="message" placeholder="Type your question" rows="8"></textarea>
-									</div>
-									<div class="col-md-6 col-sm-6 col-xs-12">
-										<input type="submit" name="submit" class="itg-button" value="Send">
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-                </div>
-            </div>
-        </section>
-        <!--//================Contact end==============//-->
-        <!-- scroll top button -->
-        <a id="scroll-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
-        <!--//================Footer end==============//--> 	
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/plugin/megamenu/js/hover-dropdown-menu.js"></script>
-        <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
-        <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script> 
-        <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>        
-        <script src="assets/js/main.js"></script>
-    </body>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--//================Contact end==============//-->
+    <!-- scroll top button -->
+    <a id="scroll-top"
+      ><i class="fa fa-angle-double-up" aria-hidden="true"></i
+    ></a>
+    <!--//================Footer end==============//-->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/plugin/megamenu/js/hover-dropdown-menu.js"></script>
+    <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
+    <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
+    <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
+    <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script>
+    <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
