--- a/comming-soon.html
+++ b/comming-soon.html
@@ -1,159 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!--[if IE]>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-        <![endif]-->
-        <meta name="keywords" content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump" />
-        <meta namex="description"
-            content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
-        <meta name="author" content="Ronak Patel" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies</title>
-        <!-- Bootstrap -->
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-        <!-- Master Css -->
-        <link href="main.css" rel="stylesheet">
-    </head>
-    <body>
-        <!--//================preloader  start==============//--> 
-        <div class="preloader">
-            <div class="itg-loader">
-                <figure>
-                    <img src="assets/img/loader/loder.png" alt=""/>
-                </figure>
-                <h4>Loading</h4>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--[if IE]>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <![endif]-->
+    <meta
+      name="keywords"
+      content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump"
+    />
+    <meta
+      namex="description"
+      content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies"
+    />
+    <meta name="author" content="Ronak Patel" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>
+      PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding
+      and other ceremonies
+    </title>
+    <!-- Bootstrap -->
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <!-- Master Css -->
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!--//================preloader  start==============//-->
+    <div class="preloader">
+      <div class="itg-loader">
+        <figure>
+          <img src="assets/img/loader/loder.png" alt="" />
+        </figure>
+        <h4>Loading</h4>
+      </div>
+    </div>
+    <!--//================preloader  end==============//-->
+    <!--//================Header start==============//-->
+    <header id="header" style="background-color: #000">
+      <div id="main-menu" class="wa-main-menu">
+        <!-- Menu -->
+        <div class="wathemes-menu relative">
+          <!-- navbar -->
+          <div class="navbar navbar-default mar0" role="navigation">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12 head-box">
+                  <div class="navbar-header">
+                    <!-- Button For Responsive toggle -->
+                    <button
+                      type="button"
+                      class="navbar-toggle"
+                      data-toggle="collapse"
+                      data-target=".navbar-collapse"
+                    >
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <!-- Logo -->
+                    <a class="navbar-brand" href="index.html">
+                      <img
+                        class="site_logo"
+                        alt="Site Logo"
+                        src="assets/img/logo.png"
+                      />
+                    </a>
+                  </div>
+                  <!-- Navbar Collapse -->
+                  <div class="navbar-collapse collapse">
+                    <!-- nav -->
+                    <ul class="nav navbar-nav">
+                      <li><a href="index.html">About Us</a></li>
+                      <li>
+                        <a href="photography.html"
+                          >Photography
+                          <i
+                            class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
+                            aria-hidden="true"
+                          ></i
+                        ></a>
+                      </li>
+                      <li><a href="contact.html">contact us</a></li>
+                    </ul>
+                  </div>
+                  <!-- navbar-collapse -->
+                </div>
+                <!-- col-md-12 -->
+              </div>
+              <!-- row -->
             </div>
+            <!-- container -->
+          </div>
+          <!-- navbar -->
+          <div id="search-open" class="top-search">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="input-group">
+                  <span class="input-group-addon"
+                    ><i class="fa fa-search"></i
+                  ></span>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Search"
+                  />
+                  <a class="input-group-addon close-search search-close"
+                    ><i class="fa fa-times"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!--//================preloader  end==============//-->
-        <!--//================Header start==============//-->
-        <header id="header" style="background-color: #000;">
-            <div id="main-menu" class="wa-main-menu">
-                <!-- Menu -->
-                <div class="wathemes-menu relative">
-                    <!-- navbar -->
-                    <div class="navbar navbar-default mar0" role="navigation">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-md-12 head-box">
-                                    <div class="navbar-header">
-                                        <!-- Button For Responsive toggle -->
-                                        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                            data-target=".navbar-collapse">
-                                            <span class="sr-only">Toggle navigation</span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                        </button>
-                                        <!-- Logo -->
-                                        <a class="navbar-brand" href="index.html">
-                                            <img class="site_logo" alt="Site Logo" src="assets/img/logo.png" />
-                                        </a>
-                                    </div>
-                                    <!-- Navbar Collapse -->
-                                    <div class="navbar-collapse collapse">
-                                        <!-- nav -->
-                                        <ul class="nav navbar-nav">
-                                            <li><a href="index.html">About Us</a></li>
-                                            <li>
-                                                <a href="photography.html">Photography <i
-                                                        class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
-                                                        aria-hidden="true"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="comming-soon.html">Videography <i
-                                                        class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
-                                                        aria-hidden="true"></i></a>
-                                            </li>
-                                            <li><a href="contact.html">contact us</a></li>
-                                        </ul>
-                                    </div>
-                                    <!-- navbar-collapse -->
-                                </div>
-                                <!-- col-md-12 -->
-                            </div>
-                            <!-- row -->
-                        </div>
-                        <!-- container -->
-                    </div>
-                    <!-- navbar -->
-                    <div id="search-open" class="top-search">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="input-group"> <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                                    <input type="text" class="form-control" placeholder="Search">
-                                    <a class="input-group-addon close-search search-close"><i class="fa fa-times"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--  Menu -->
-            </div>
-        </header>
-        <!--//================Header end==============//-->
-        <!--//================Comming Soon==============//-->
-        <section class="special-section">
-            <div class="special-style dark-overlay">
-                <div class="comming-soon-style-1 parallax-style"></div>
-            </div>
-            <div class="comming-soon-content">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1 col-xs-offset-0">
-                            <figure>
-                                <a href="index.html"><img src="assets/img/logo.png" alt=""/></a>
-                            </figure>
-                            <h1>WE ARE COMMING SOON</h1>
-                            <div class="timer">
-                                <ul id="coming-soon-timer">
-                                    <li class="after-border"><span id="weeks"></span><br>
-                                        <span class="normal">Weeks</span>
-                                    </li>
-                                    <li class="after-border"><span id="days"></span><br>
-                                        <span class="normal">Days</span>
-                                    </li>
-                                    <li class="after-border"><span id="hours"></span><br>
-                                        <span class="normal">Hours</span>
-                                    </li>
-                                    <li class="after-border"><span id="minutes"></span><br>
-                                        <span class="normal">Minutes</span>
-                                    </li>
-                                    <li><span id="seconds"></span><br>
-                                        <span class="normal">Seconds</span>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <ul class="social-icon solid">
-                    <li><a target="_blank" href="https://www.facebook.com/photostudiocreativity.in" class="active"><span><i
-                                    class="fa fa-facebook-square" aria-hidden="true"></i></span></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/photostudio_creativity"><span><i class="fa fa-instagram"
-                                    aria-hidden="true"></i></span></a></li>
-                    <li><a target="_blank" href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"><span><i
-                                    class="fa fa-youtube" aria-hidden="true"></i></span></a></li>
+        <!--  Menu -->
+      </div>
+    </header>
+    <!--//================Header end==============//-->
+    <!--//================Comming Soon==============//-->
+    <section class="special-section">
+      <div class="special-style dark-overlay">
+        <div class="comming-soon-style-1 parallax-style"></div>
+      </div>
+      <div class="comming-soon-content">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1 col-xs-offset-0"
+            >
+              <figure>
+                <a href="index.html"
+                  ><img src="assets/img/logo.png" alt=""
+                /></a>
+              </figure>
+              <h1>WE ARE COMMING SOON</h1>
+              <div class="timer">
+                <ul id="coming-soon-timer">
+                  <li class="after-border">
+                    <span id="weeks"></span><br />
+                    <span class="normal">Weeks</span>
+                  </li>
+                  <li class="after-border">
+                    <span id="days"></span><br />
+                    <span class="normal">Days</span>
+                  </li>
+                  <li class="after-border">
+                    <span id="hours"></span><br />
+                    <span class="normal">Hours</span>
+                  </li>
+                  <li class="after-border">
+                    <span id="minutes"></span><br />
+                    <span class="normal">Minutes</span>
+                  </li>
+                  <li>
+                    <span id="seconds"></span><br />
+                    <span class="normal">Seconds</span>
+                  </li>
                 </ul>
+              </div>
             </div>
-        </section>
-        <!--//================Comming Soon==============//-->		
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/plugin/megamenu/js/hover-dropdown-menu.js"></script>
-        <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
-        <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script> 
-        <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>
-        <script type="text/javascript" src="assets/plugin/counter/js/jquery.countTo.js"></script> 
-        <script type="text/javascript" src="assets/plugin/counter/js/jquery.appear.js"></script>        
-        <script src="assets/js/main.js"></script>
-    </body>
+          </div>
+        </div>
+        <ul class="social-icon solid">
+          <li>
+            <a
+              target="_blank"
+              href="https://www.facebook.com/photostudiocreativity.in"
+              class="active"
+              ><span
+                ><i class="fa fa-facebook-square" aria-hidden="true"></i></span
+            ></a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/photostudio_creativity"
+              ><span><i class="fa fa-instagram" aria-hidden="true"></i></span
+            ></a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.youtube.com/channel/UCl97fYXvHjD58jD-SEo2YtA/videos"
+              ><span><i class="fa fa-youtube" aria-hidden="true"></i></span
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--//================Comming Soon==============//-->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/plugin/megamenu/js/hover-dropdown-menu.js"></script>
+    <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
+    <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
+    <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
+    <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script>
+    <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>
+    <script
+      type="text/javascript"
+      src="assets/plugin/counter/js/jquery.countTo.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/plugin/counter/js/jquery.appear.js"
+    ></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
