Render images on photography page

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </section>
         <!--//================Work end==============//-->
         <div class="clear"></div>
-        <div class="padT100 padB100">s</div>
+        <div class="padT100 padB100"></div>
         <!--//================Contact start==============//-->
         <section>
             <div class="container">
