--- a/photography.html
+++ b/photography.html
@@ -35,7 +35,7 @@
     <!-- Master Css -->
     <link href="main.css" rel="stylesheet" />
   </head>
-  <body>
+  <body onload="loadPhotographyImages()">
     <!--//================preloader  start==============//-->
     <div class="preloader">
       <div class="itg-loader">
@@ -128,7 +128,18 @@
       </div>
     </header>
     <!--//================Header end==============//-->
-    <div class="padT100 padB100">s</div>
+    <div class="padT100 padB100"></div>
+    <!--//================Gallery start==============//-->
+    <section>
+      <div class="container-fluid">
+        <div class="row">
+          <div id="photographyGallery"></div>
+        </div>
+      </div>
+    </section>
+    <!--//================Gallery end==============//-->
+    <div class="clear"></div>
+    <div class="padT100 padB100"></div>
     <!--//================Contact start==============//-->
     <section>
       <div class="container">
