--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                         </button> 
                                         <!-- Logo -->
                                         <a class="navbar-brand" href="index.html">
-                                        <img class="site_logo" alt="Site Logo"  src="assets/img/logo.png" />
+                                        <img class="site_logo" alt="Site Logo"  src="assets/img/logo/logo.png" height="1" width="1" />
                                         </a>
                                     </div>
                                     <!-- Navbar Collapse -->
@@ -59,7 +59,7 @@
                                         <ul class="nav navbar-nav">
                                             <li><a href="index.html">About Us</a></li>
                                             <li>
-                                                <a href="photography.html">Photography <i class="fa fa-angle-down hidden-lg hidden-md hidden-sm" aria-hidden="true"></i></a>
+                                                <a href="photography.html">Photography</a>
                                             </li>
                                             <li><a href="contact.html">contact us</a></li>
                                         </ul>
