--- a/error.html
+++ b/error.html
@@ -1,76 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!--[if IE]>
-                <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-                <![endif]-->
-        <meta name="keywords" content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump" />
-        <meta namex="description"
-            content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies" />
-        <meta name="author" content="Ronak Patel" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies</title>
-        <!-- Bootstrap -->
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
-        <!-- Master Css -->
-        <link href="main.css" rel="stylesheet">
-    </head>
-    <body>
-        <!--//================preloader  start==============//--> 
-        <div class="preloader">
-            <div class="itg-loader">
-                <figure>
-                    <img src="assets/img/loader/loder.png" alt=""/>
-                </figure>
-                <h4>Loading</h4>
-            </div>
-        </div>
-        <!--//================preloader  end==============//--> 
-        <!--//================Error==============//-->
-        <section class="special-section">
-            <div class="special-style dark-overlay">
-                <div class="error-style-1 parallax-style"></div>
-            </div>
-            <div class="error-content">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1 col-xs-offset-0">
-                            <figure>
-                                <a href="index.html"><img src="assets/img/logo.png" alt=""/></a>
-                            </figure>
-                            <h1>page not found!</h1>
-                            <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed eiusmod tempor incididunt ut labore et dolore magna aliqua.</i></p>
-                            <figure class="error-img">
-                                <img src="assets/img/all/404.png" alt=""/>
-                            </figure>
-                            <div class="row">
-                                <div class="col-md-8 col-sm-8 col-xs-10 col-md-offset-2 col-sm-offset-2 col-xs-offset-1">
-                                    <a href="index.html" class="itg-button">go home</a>
-                                    <a href="contact.html" class="itg-button">contact</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--[if IE]>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <![endif]-->
+    <meta
+      name="keywords"
+      content="photostudio creativity.in|Wedding|Cinematography|Maternity|Modelling|BabyBump"
+    />
+    <meta
+      namex="description"
+      content="PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding and other ceremonies"
+    />
+    <meta name="author" content="Ronak Patel" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>
+      PhotoStudio Creativity | Creative Photography Agency, Portfolio in wedding
+      and other ceremonies
+    </title>
+    <!-- Bootstrap -->
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <!-- Master Css -->
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!--//================preloader  start==============//-->
+    <div class="preloader">
+      <div class="itg-loader">
+        <figure>
+          <img src="assets/img/loader/loder.png" alt="" />
+        </figure>
+        <h4>Loading</h4>
+      </div>
+    </div>
+    <!--//================preloader  end==============//-->
+    <!--//================Error==============//-->
+    <section class="special-section">
+      <div class="special-style dark-overlay">
+        <div class="error-style-1 parallax-style"></div>
+      </div>
+      <div class="error-content">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1 col-xs-offset-0"
+            >
+              <figure>
+                <img
+                  class="site_logo"
+                  alt="Site Logo"
+                  src="assets/img/logo/logo.png"
+                  height="1"
+                  width="1"
+                />
+              </figure>
+              <h1>page not found!</h1>
+              <p>
+                <i
+                  >Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua.</i
+                >
+              </p>
+              <figure class="error-img">
+                <img src="assets/img/all/404.png" alt="" />
+              </figure>
+              <div class="row">
+                <div
+                  class="col-md-8 col-sm-8 col-xs-10 col-md-offset-2 col-sm-offset-2 col-xs-offset-1"
+                >
+                  <a href="index.html" class="itg-button">go home</a>
+                  <a href="contact.html" class="itg-button">contact</a>
                 </div>
+              </div>
             </div>
-        </section>
-        <!--//================Error Soon==============//-->
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/plugin/megamenu/js/hover-dropdown-menu.js"></script>
-        <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
-        <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
-        <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script> 
-        <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>		
-        <script type="text/javascript" src="assets/plugin/counter/js/jquery.countTo.js"></script> 
-        <script type="text/javascript" src="assets/plugin/counter/js/jquery.appear.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--//================Error Soon==============//-->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/plugin/megamenu/js/hover-dropdown-menu.js"></script>
+    <script src="assets/plugin/megamenu/js/jquery.hover-dropdown-menu-addon.js"></script>
+    <script src="assets/plugin/owl-carousel/js/owl.carousel.min.js"></script>
+    <script src="assets/plugin/fancyBox/js/jquery.fancybox.pack.js"></script>
+    <script src="assets/plugin/fancyBox/js/jquery.fancybox-media.js"></script>
+    <script src="assets/plugin/mixItUp/js/jquery.mixitup.js"></script>
+    <script
+      type="text/javascript"
+      src="assets/plugin/counter/js/jquery.countTo.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/plugin/counter/js/jquery.appear.js"
+    ></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
