--- a/photography.html
+++ b/photography.html
@@ -74,7 +74,9 @@
                       <img
                         class="site_logo"
                         alt="Site Logo"
-                        src="assets/img/logo.png"
+                        src="assets/img/logo/logo.png"
+                        height="1"
+                        width="1"
                       />
                     </a>
                   </div>
@@ -84,13 +86,7 @@
                     <ul class="nav navbar-nav">
                       <li><a href="index.html">About Us</a></li>
                       <li>
-                        <a href="#"
-                          >Photography
-                          <i
-                            class="fa fa-angle-down hidden-lg hidden-md hidden-sm"
-                            aria-hidden="true"
-                          ></i
-                        ></a>
+                        <a href="#">Photography</a>
                       </li>
                       <li><a href="contact.html">contact us</a></li>
                     </ul>
