Adjust service list

--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
                         <!--<p>Wedding , Pre-Wedding, Engagement, Modeling, Maternity, Baby Shoot,</p>-->
                          <!--align left and right -->
                             <div class="d-flex" style="font-size: 1.25em; margin-top: 10px;">
-                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Wedding</li>
+                                <li class="col-xs-6 services-left"> <i class="fa fa-camera"></i> Wedding</li>
                                 <li class="col-xs-6"> <i class="fa fa-camera"></i> Pre-Wedding</li>
-                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Engagement</li>
+                                <li class="col-xs-6 services-left"> <i class="fa fa-camera"></i> Engagement</li>
                                 <li class="col-xs-6"> <i class="fa fa-camera"></i> Modelling</li>
-                                <li class="col-xs-6"> <i class="fa fa-camera"></i> Maternity</li>
+                                <li class="col-xs-6 services-left"> <i class="fa fa-camera"></i> Maternity</li>
                                 <li class="col-xs-6"> <i class="fa fa-camera"></i> Baby Photoshoot</li>
                             </div>
                     </div>
