--- a/photography.html
+++ b/photography.html
@@ -100,25 +100,6 @@
             <!-- container -->
           </div>
           <!-- navbar -->
-          <div id="search-open" class="top-search">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="input-group">
-                  <span class="input-group-addon"
-                    ><i class="fa fa-search"></i
-                  ></span>
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Search"
-                  />
-                  <a class="input-group-addon close-search search-close"
-                    ><i class="fa fa-times"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
         <!--  Menu -->
       </div>
@@ -129,8 +110,15 @@
     <section>
       <div class="container-fluid">
         <div class="row">
+          <div class="theme-heading">
+            <h1>Photo Gallery</h1>
+            <h3>
+              <span class="heading-shape">Photo <strong>Gallery</strong></span>
+            </h3>
+          </div>
           <div id="photographyGallery"></div>
         </div>
+        <div class="padT100 padB100"></div>
       </div>
     </section>
     <!--//================Gallery end==============//-->
